--- a/base-referencias.bib
+++ b/base-referencias.bib
@@ -378,3 +378,11 @@
   Url                      = {https://pt.wikipedia.org/wiki/Spring_Framework},
   Urlaccessdate            = {8 de fevereiro de 2019}
 }
+
+@Misc{DevMedia2012,
+  Title                    = {Devmedia: Gerando Relatórios com JasperReports},
+  Author                   = {Marcos Alexandre Vidolin de Lima},
+  Year                     = {2012},
+  Url                      = {https://www.devmedia.com.br/gerando-relatorios-com-jasperreports/24798},
+  Urlaccessdate            = {12 de fevereiro de 2019}
+}
