--- a/estrutura/textuais/desenvolvimento/embasamento-teorico.tex
+++ b/estrutura/textuais/desenvolvimento/embasamento-teorico.tex
@@ -67,6 +67,13 @@ A abstração do JPA é a sua maior característica, permitindo que o programado
 \section{JasperReports}
 \label{sec:embasamentoTeoricoJasper}
 
+O JasperReports é um framework open source inteiramente escrito em Java. Ele é um dos mecanismos mais populares para a geração de relatórios na plataforma Java.
+O JasperReports nos fornece funcionalidades que permitem criar relatórios complexos de forma estruturada, a partir da elaboração de um template \cite{Devmedia2012}.
+
+O template é um arquivo XML com a extensão .jrxml. É neste arquivo que é especificada a estrutura do relatório, ou seja, é nele onde informamos os dados que irão compor o relatório, em que posição e de que forma serão exibidos, formando assim um layout. Utiliza-se o IReports para diagramação dos elementos de maneira gráfica.
+
+A partir da definição do template e com o auxílio do framework JasperReports é possível gerar relatórios e exportá-los para diversos formatos, como: HTML, PDF e DOC.
+
 \section{Tomcat}
 \label{sec:embasamentoTeoricoTomcat}
 
