--- a/estrutura/pre-textuais/listas/lista-siglas.tex
+++ b/estrutura/pre-textuais/listas/lista-siglas.tex
@@ -13,12 +13,13 @@
     \item[SVN] Apache Subversion
     \item[MVC] Model View Control
     \item[POJO] Plain Old Java Objects
-    \item[IDE] 
+    \item[IDE] Integrated development environment
     \item[COSIS] Coordenadoria de Sistemas
     \item[COSEG] Coordenadoria de Serviços Gerais
     \item[SETRAN] Seção de Transportes
     \item[JEE] Java Enterprise Edition
-    \item[LDAP]   
+    \item[LDAP] Lightweight Directory Access Protocol
+    \item[PDF] Portable Document Format
 \end{siglas}
 
 % OBSERVAÇÕES-----------------------------------------------------------------------------
