--- a/estrutura/pre-textuais/listas/lista-siglas.tex
+++ b/estrutura/pre-textuais/listas/lista-siglas.tex
@@ -20,6 +20,7 @@
     \item[JEE] Java Enterprise Edition
     \item[LDAP] Lightweight Directory Access Protocol
     \item[PDF] Portable Document Format
+    \item[DAO] Data Access Object 
 \end{siglas}
 
 % OBSERVAÇÕES-----------------------------------------------------------------------------
