--- a/estrutura/textuais/introducao.tex
+++ b/estrutura/textuais/introducao.tex
@@ -76,10 +76,8 @@ Durante o processo foram utilizadas as metodologias Scrum para gestão e planeja
 \label{sec:organizacaoRelatorio}
 Além desse capítulo, o relatório está dividido em outros quatro capítulos brevemente descritos abaixo:
 
-Capítulo 2 - Embasamento Teórico: Aborda as tecnologias e linguagens que foram utilizadas durante o estágio, bem como as definições necessárias para a compreensão do processo.
+\autoref{chap:embasamentoTeorico} - Embasamento Teórico: aborda as tecnologias e linguagens que foram utilizadas durante o estágio, bem como as definições necessárias para a compreensão do processo.
 
-Capítulo 3 - \imprimirtitulo: apresenta o projeto, no qual as atividades do estagiário foram realizadas, descrevendo os principais conceitos, arquitetura e funcionalidades.
+\autoref{chap:atividadesRealizadas} - Atividades Realizadas: apresenta o projeto, no qual as atividades do estagiário foram realizadas, descrevendo os principais conceitos e funcionalidades. Relata as atividades realizadas ao longo do período de estágio descrevendo o fluxo e o processo de desenvolvimento e detalha a implementação de algumas funcionalidades.
 
-Capítulo 4 – Atividades Realizadas: Relata as atividades realizadas ao longo do período de estágio; descreve o fluxo e o processo de desenvolvimento dessas atividades e detalha a implementação das funcionalidades.
-
-Capítulo 5 – Conclusão: São feitas as considerações finais, ou seja, um relato sobre as experiências adquiridas, metas e objetivos alcançados, o que poderia ter sido feito para obter um melhor resultado final, erros cometidos e trabalhos futuros.
+\autoref{chap:consideracoesFinais} – Considerações Finais: Apresenta um relato sobre as experiências adquiridas, metas e objetivos alcançados, o que poderia ter sido feito para obter um melhor resultado final, erros cometidos e trabalhos futuros.
