Update: Embasamento teórico - Tomcat

--- a/base-referencias.bib
+++ b/base-referencias.bib
@@ -386,3 +386,12 @@
   Url                      = {https://www.devmedia.com.br/gerando-relatorios-com-jasperreports/24798},
   Urlaccessdate            = {12 de fevereiro de 2019}
 }
+
+@Misc{WikipediaTomcat2018,
+  Title                    = {Apache Tomcat},
+  Author                   = {Wikipedia},
+  Year                     = {2018},
+  Timestamp                = {2018.07.18},
+  Url                      = {https://pt.wikipedia.org/wiki/Apache_Tomcat},
+  Urlaccessdate            = {14 de fevereiro de 2019}
+}
