--- a/estrutura/textuais/desenvolvimento/embasamento-teorico.tex
+++ b/estrutura/textuais/desenvolvimento/embasamento-teorico.tex
@@ -91,3 +91,9 @@ A partir da definição do template e com o auxílio do framework JasperReports 
 \section{Tomcat}
 \label{sec:embasamentoTeoricoTomcat}
 
+O Apache Tomcat® é uma implementação open source das tecnologias Java Servlet, JavaServer Pages, Java Expression Language e Java WebSocket technologies.
+
+Ele atende parte da especificação JEE com as tecnologias Servlet e JSP  e tem a capacidade de atuar também como servidor web HTTP escrito puramente em Java. Ele inclui ferramentas para configuração e gerenciamento, o que também pode ser feito editando-se manualmente arquivos de configuração formatados em XML \cite{WikipediaTomcat2018}.
+
+Atualmente o Tomcat está na versão 9.x. Para o projeto foi utilizado o Tomcat 8.0.x tanto nas máquinas de desenvolvimento quanto nos servidores. O TRE-PB faz o uso de múltiplos servidores de produção e homologação com o Tomcat, dividindo assim a carga das aplicações. 
+
