--- a/ifpb-tcc.tex
+++ b/ifpb-tcc.tex
@@ -45,7 +45,7 @@
 \include{estrutura/pre-textuais/agradecimentos}        			   % Agradecimentos
 \include{estrutura/pre-textuais/epigrafe}              			   % Epígrafe
 \include{estrutura/pre-textuais/resumo}             			   % Resumo em Português
-\include{estrutura/pre-textuais/abstract}             		           % Resumo em Inglês
+% \include{estrutura/pre-textuais/abstract}             		           % Resumo em Inglês
 \include{estrutura/pre-textuais/listas/listas-ilustracoes/lista-figuras}   % Lista de Figuras
 %\include{estrutura/pre-textuais/listas/listas-ilustracoes/lista-quadros}   % Lista de Quadros
 %\include{estrutura/pre-textuais/listas/lista-tabelas}         		   % Lista de Tabelas
