--- a/estrutura/pre-textuais/epigrafe.tex
+++ b/estrutura/pre-textuais/epigrafe.tex
@@ -4,7 +4,7 @@
 
 \begin{epigrafe}
 
-\textit{Eu denomino meu campo de Gestão do Conhecimento, mas você não pode gerenciar conhecimento. Ninguém pode. O que pode fazer - o que a empresa pode fazer - é gerenciar o ambiente que otimize o conhecimento. (PRUSAK, Laurence, 1997).}
+\textit{Devemos mudar nossa atitude tradicional em relação à construção de programas. Em vez de imaginar que nossa principal tarefa é instruir o computador sobre o que ele deve fazer, vamos imaginar que nossa principal tarefa é explicar a seres humanos o que queremos que o computador faça. (Donald E. Knuth, Literate Programming).}
 
 \end{epigrafe}
 
