--- a/estrutura/pre-textuais/folha-aprovacao.tex
+++ b/estrutura/pre-textuais/folha-aprovacao.tex
@@ -2,7 +2,7 @@
 % Folha de Aprovação
 % -----------------------------------------------------------------------------
 
-\textopadraofolhadeaprovacao{Esta folha deverá ser substituída pela cópia digitalizada da folha de aprovação fornecida.}
+\textopadraofolhadeaprovacao{}
 
 % -----------------------------------------------------------------------------
 % Este documento foi mantido apenas para preservar a paginação do trabalho
