--- a/estrutura/pre-textuais/agradecimentos.tex
+++ b/estrutura/pre-textuais/agradecimentos.tex
@@ -2,6 +2,10 @@
 
 \begin{agradecimentos}[AGRADECIMENTOS]
 
+    Agradeço a Deus por ter me acompanhado por todos os anos de minha vida. 
+    À família por todo amparo e formação social, neste caso representada pelos meus Pais, meu Irmão minha Esposa, Enteada e Filho. 
+    Aos Docentes que dedicam a vida na formação de indivíduos conscientes e responsáveis
+
 Edite e coloque aqui os agradecimentos às pessoas e/ou instituições que contribuíram para a realização do trabalho.
 
 É obrigatório o agradecimento às instituições de fomento à pesquisa que financiaram total ou parcialmente o trabalho, inclusive no que diz respeito à concessão de bolsas.
