--- a/estrutura/textuais/introducao.tex
+++ b/estrutura/textuais/introducao.tex
@@ -80,4 +80,4 @@ Além desse capítulo, o relatório está dividido em outros quatro capítulos b
 
 \autoref{chap:atividadesRealizadas} - Atividades Realizadas: apresenta o projeto, no qual as atividades do estagiário foram realizadas, descrevendo os principais conceitos e funcionalidades. Relata as atividades realizadas ao longo do período de estágio descrevendo o fluxo e o processo de desenvolvimento e detalha a implementação de algumas funcionalidades.
 
-\autoref{chap:consideracoesFinais} – Considerações Finais: Apresenta um relato sobre as experiências adquiridas, metas e objetivos alcançados, o que poderia ter sido feito para obter um melhor resultado final, erros cometidos e trabalhos futuros.
+\autoref{chap:consideracoesFinais} – Considerações Finais: Apresenta um relato sobre as experiências adquiridas, metas e objetivos alcançados. O quão grande foi a contribuição do estágio na minha formação profissional.
