--- a/estrutura/pre-textuais/agradecimentos.tex
+++ b/estrutura/pre-textuais/agradecimentos.tex
@@ -8,6 +8,6 @@
 
     Antes mesmo de sair de Mato Grosso e chegar à Paraíba percebi que seria bem vindo nessa terra. Ainda analisando as possibilidades de vir, entrei em contato com a coordenação do curso de TSI solicitando informações sobre a inscrição do processo seletivo especial, que precisava ser feito pessoalmente. Então a inestimável, extraordinária e dedicada Prof.ª Valéria, coordenadora ná época, pediu que eu enviasse os documentos junto com uma procuração que ela realizaria a inscrição para mim. Desde esse momento vi as portas se abrindo para mim e minha família em uma nova vida que estava por vir. Fica aqui o agradecimento especial a Prof.ª Valéria e ao povo paraibano que nos acolheram.
 
-    Gostaria de dedicar um agradecimento especial a alguns professores que se destacaram pelo amor a profissão, a arte de ensinar. Dentre eles enfatizo, em ordem cronológica do curso, a Prof.ª Valéria, que sempre demonstrou muito empenho ao apresentar a disciplina de algorítimos os novatos, ao Prof.º Fausto que sempre foi um grande amigo, rendendo boas discussões sobre tecnologias e mercado de trabalho, o Prof.º Jaildo pela sua ética impecável, .... (continua...)
+    Gostaria de dedicar um agradecimento especial a alguns professores que se destacaram pelo amor a profissão e a arte de ensinar. Dentre eles enfatizo, em ordem cronológica do curso, a Prof.ª Valéria, que sempre demonstrou muito empenho ao apresentar a disciplina de algorítimos para os novatos, ao Prof.º Fausto que sempre foi um grande amigo, rendendo boas discussões sobre tecnologias e mercado de trabalho, o Prof.º Jaildo pela sua ética impecável, o Prof.º Fred que faz jus ao apelido adquirido ao longo de sua profissão que é "O Mito" lembrado e enfatizado por gerações de turmas do curso de TSI, o Prof.º Dênio pelo domínio impecável de sua disciplina, a Prof.ª Damires por toda sua capacidade, classe e ética impecáveis ao conduzir suas aulas, pelas calorosas discussões sobre gestão e analise nas aulas da Prof.ª Heremita e Prof.ª Nadja e também o Prof.º Paulo que apresentou sua disciplina de maneira respeitosa e com muito amor. 
 
 \end{agradecimentos}
