--- a/estrutura/pre-textuais/agradecimentos.tex
+++ b/estrutura/pre-textuais/agradecimentos.tex
@@ -8,7 +8,7 @@
 
     Antes mesmo de sair de Mato Grosso e chegar à Paraíba percebi que seria bem vindo nessa terra. Ainda analisando as possibilidades de vir, entrei em contato com a coordenação do curso de TSI solicitando informações sobre a inscrição do processo seletivo especial, que precisava ser feito pessoalmente. Então a inestimável, extraordinária e dedicada Prof.ª Valéria, coordenadora ná época, pediu que eu enviasse os documentos junto com uma procuração que ela realizaria a inscrição para mim. Desde esse momento vi as portas se abrindo para mim e minha família em uma nova vida que estava por vir. Fica aqui o agradecimento especial a Prof.ª Valéria e ao povo paraibano que nos acolheram.
 
-    Gostaria de dedicar um agradecimento especial a alguns professores que se destacaram pelo amor a profissão e a arte de ensinar. Dentre eles enfatizo, a Prof.ª Valéria, que sempre demonstrou muito empenho e paixao ao apresentar a disciplina de algorítimos para os novatos, o Prof.º Fausto que sempre foi um grande amigo, rendendo boas discussões sobre tecnologias e mercado de trabalho, o Prof.º Jaildo pela sua ética impecável, o Prof.º Fred que faz jus ao apelido adquirido ao longo de sua profissão que é ``O Mito" \space lembrado e enfatizado por gerações de turmas do curso de TSI, o Prof.º Dênio pelo domínio impecável de sua disciplina, a Prof.ª Damires por toda sua capacidade, classe e ética impecáveis ao conduzir suas aulas, a Prof.ª Heremita e Prof.ª Nadja pelas calorosas discussões sobre gestão, analise e execução de projetos em suas aulas e também o Prof.º Paulo que apresentou sua disciplina de maneira respeitosa e com muito amor.
+    Gostaria de dedicar um agradecimento especial a alguns professores que se destacaram pelo amor a profissão e a arte de ensinar. Dentre eles enfatizo a Prof.ª Valéria, que sempre demonstrou muito empenho e paixão ao apresentar a disciplina de algorítimos para os novatos, o Prof.º Fausto que sempre foi um grande amigo, rendendo boas discussões sobre tecnologias e mercado de trabalho, o Prof.º Jaildo pela sua ética impecável, o Prof.º Fred que faz jus ao apelido adquirido ao longo de sua profissão que é ``O Mito" \space lembrado e enfatizado por gerações de turmas do curso de TSI, o Prof.º Dênio pelo domínio impecável de sua disciplina, a Prof.ª Damires por toda sua capacidade, classe e ética impecáveis ao conduzir suas aulas, a Prof.ª Heremita e Prof.ª Nadja pelas calorosas discussões sobre gestão, analise e execução de projetos em suas aulas e também o Prof.º Paulo que apresentou sua disciplina de maneira respeitosa e com muito amor.
     
     Agradeço também a todos os amigos e que fiz durante minha jornada no TRE-PB. Em especial ao Sr. Francisco (Chico) por toda sua atenção e dedicação ao trabalho, sempre pronto a atender e encontrar soluções, ao Rômullo e Leonel pela paciência, capacidade técnica e paixão pela profissão, que sempre estiveram dispostos a me auxiliar em dificuldades técnicas explicando tudo com muita riqueza de detalhes. Agradeço também a todos os amigos estagiários que passaram durante o tempo em que estive, sempre companheiros prontos a aprender e ensinar.
 
