--- a/estrutura/textuais/introducao.tex
+++ b/estrutura/textuais/introducao.tex
@@ -74,7 +74,7 @@ Durante o processo foram utilizadas as metodologias Scrum para gestão e planeja
 
 \section{Organização do relatório}
 \label{sec:organizacaoRelatorio}
-Além desse capítulo, o relatório está dividido em outros quatro capítulos brevemente descritos abaixo:
+Além desse capítulo, o relatório está dividido em outros três capítulos brevemente descritos abaixo:
 
 \autoref{chap:embasamentoTeorico} - Embasamento Teórico: aborda as tecnologias e linguagens que foram utilizadas durante o estágio, bem como as definições necessárias para a compreensão do processo.
 
