--- a/estrutura/pre-textuais/agradecimentos.tex
+++ b/estrutura/pre-textuais/agradecimentos.tex
@@ -3,13 +3,16 @@
 \begin{agradecimentos}[AGRADECIMENTOS]
 
     Agradeço a Deus e ao meu Anjo da Guarda  por me acompanharem em todos os momentos da minha vida. 
-    À família por todo amparo e formação social, neste caso representada pelos meus Pais, meu Irmão, minha Esposa, Enteada e Filho. 
+    À família por todo amparo e formação social, neste caso representada pelos meus Pais, meu Irmão, minha Esposa, Enteada e Filho.
+    A todos os amigos que fiz ao longo dessa jornada, pois foram com eles que dividi minhas ansiedades e alegrias. 
     A todos os Docentes que dedicam a vida na formação de indivíduos conscientes e responsáveis, em especial aos Docentes do Instituto Federal da Paraíba, pois me surpreenderam desde o primeiro instante com a qualidade e dedicação em que realizam seu trabalho.
 
-    Antes mesmo de sair de Mato Grosso e chegar à Paraíba percebi que seria bem vindo nessa terra. Ainda analisando as possibilidades de vir, entrei em contato com a coordenação do curso de TSI solicitando informações sobre a inscrição do processo seletivo especial, que precisava ser feito pessoalmente. Então a inestimável, extraordinária e dedicada Prof.ª Valéria, coordenadora ná época, pediu que eu enviasse os documentos junto com uma procuração que ela realizaria a inscrição para mim. Desde esse momento vi as portas se abrindo para mim e minha família em uma nova vida que estava por vir. Fica aqui o agradecimento especial a Prof.ª Valéria e ao povo paraibano que nos acolheram.
+    Antes mesmo de sair de Mato Grosso e chegar à Paraíba percebi que seria bem vindo nessa terra. Ainda analisando as possibilidades de vir, entrei em contato com a coordenação do curso de TSI solicitando informações sobre a inscrição do processo seletivo especial, que precisava ser feito pessoalmente. Então a extraordinária e dedicada Prof.ª Valéria, coordenadora ná época, pediu que eu enviasse os documentos junto com uma procuração que ela realizaria a inscrição para mim. Nesse momento vi as portas se abrindo para mim e minha família em uma nova vida que estava por vir. Fica aqui o agradecimento especial a Prof.ª Valéria e ao povo paraibano que nos acolheram.
 
     Gostaria de dedicar um agradecimento especial a alguns professores que se destacaram pelo amor a profissão e a arte de ensinar. Dentre eles enfatizo a Prof.ª Valéria, que sempre demonstrou muito empenho e paixão ao apresentar a disciplina de algorítimos para os novatos, o Prof.º Fausto que sempre foi um grande amigo, rendendo boas discussões sobre tecnologias e mercado de trabalho, o Prof.º Jaildo pela sua ética impecável, o Prof.º Fred que faz jus ao apelido adquirido ao longo de sua profissão que é ``O Mito" \space lembrado e enfatizado por gerações de turmas do curso de TSI, o Prof.º Dênio pelo domínio impecável de sua disciplina, a Prof.ª Damires por toda sua capacidade, classe e ética impecáveis ao conduzir suas aulas, a Prof.ª Heremita e Prof.ª Nadja pelas calorosas discussões sobre gestão, analise e execução de projetos em suas aulas e também o Prof.º Paulo que apresentou sua disciplina de maneira respeitosa e com muito amor.
     
     Agradeço também a todos os amigos e que fiz durante minha jornada no TRE-PB. Em especial ao Sr. Francisco (Chico) por toda sua atenção e dedicação ao trabalho, sempre pronto a atender e encontrar soluções, ao Rômullo e Leonel pela paciência, capacidade técnica e paixão pela profissão, que sempre estiveram dispostos a me auxiliar em dificuldades técnicas explicando tudo com muita riqueza de detalhes. Agradeço também a todos os amigos estagiários que passaram durante o tempo em que estive, sempre companheiros prontos a aprender e ensinar.
+
+    Para finalizar deixo mais um agradecimento aos meus Pais que sempre acreditaram no caminho da educação e nos resultados que ela traz e também a minha esposa e companheira Walkiria que em todos os momentos esteve ao meu lado me apoiando e acreditando, pois sem eles essa jornada com certeza seria muito mais difícil.
 
 \end{agradecimentos}
