--- a/estrutura/pre-textuais/resumo.tex
+++ b/estrutura/pre-textuais/resumo.tex
@@ -7,6 +7,8 @@
 \imprimirautorcitacao. \imprimirtitulo. \imprimirdata. \pageref {LastPage} f. \imprimirprojeto\ – \imprimirprograma, \imprimirinstituicao. \imprimirlocal, \imprimirdata.\\
 %---------------------------------------------------------------------------------------
 
+% Focar no que foi desenvolvido ....
+
 Nesse relatório de estágio, requisito para conclusão do Curso Superior de Tecnologia em Sistemas para Internet, são apresentadas atividades referentes ao planejamento, desenvolvimento e execução do projeto \imprimirtitulo. O projeto tinha previsão para ser concluído em até dois meses, porém uma mudança substancial do modelo teve que ser efetuada durante a fase de desenvolvimento da versão 1.0 e então o projeto se estendeu para cinco meses.Ele foi supervisionado pelo chefe da SEDES, Francisco Gomes, bem como acompanhado pelo supervisor técnico, que é o desenvolvedor responsável pelo projeto que também precisou ser substituído, todos efetivos no quadro do Tribunal. A equipe no projeto ficou composta por 1 gerente e 3 desenvolvedores, sendo 1 supervisor técnico e 2 estagiários, 1 Product Owner e 1 DBA responsável pelo gerenciamento do banco de dados, este lotado na SISBAN. Esse projeto colaborou profundamente para a fixação dos conhecimentos adquiridos no decorrer do curso, principalmente nas tecnologias:Java, JSF, SQL e SVN. O principal objetivo do estágio foi utilizar, na prática, os conhecimentos obtidos ao longo do curso, bem como aprender conceitos e tecnologias extras, adquirir experiência com a rotina de trabalho e principalmente aprender a codificar em equipe utilizando versionamento de código, seguindo todas as etapas previstas no PDS denominado MODUS.\\ 
 
 % O Resumo é um elemento obrigatório em tese, dissertação, monografia e TCC, constituído de uma seqüência de frases concisas e objetivas, fornecendo uma visão rápida e clara do conteúdo do estudo. O texto deverá conter no máximo 500 palavras e ser antecedido
