--- a/estrutura/textuais/introducao.tex
+++ b/estrutura/textuais/introducao.tex
@@ -35,6 +35,7 @@ Auxiliar no desenvolvimento dos ativos, soluções web desenvolvidas pela SEDES,
 \label{sec:objetivosEspecificos}
 Contribuir na implementação do Sistema de Gestão de Frotas, quando possível oferecendo alternativas para a implementação mediante aos conhecimentos adquiridos na graduação. Ganhar experiência com o fluxo de trabalho da uma equipe de desenvolvimento incorporando conceitos de versionamento de código, sendo capaz de resolver conflitos de códigos, quando houver, e evita-los. Trabalhar com reuniões diárias utilizadas pela abordagem da metodologia SCRUM, planejamento das soluções com a modelagem do negócio e com entregas frequentes sempre buscando feedback das releases pelo cliente. 
 
+% utilizar met. ágeis, trabalhar em equipe, participar de reuniões, documentar, especificar, implementar...
 
 % \section{ORGANIZAÇÃO DO TRABALHO}
 % \label{sec:organizacaoTrabalho}
