Correção das Siglas

--- a/estrutura/pre-textuais/listas/lista-siglas.tex
+++ b/estrutura/pre-textuais/listas/lista-siglas.tex
@@ -1,26 +1,28 @@
 % LISTA DE ABREVIATURAS E SIGLAS----------------------------------------------------------
 
 \begin{siglas}
+    \item[COSEG] Coordenadoria de Serviços Gerais
+    \item[COSIS] Coordenadoria de Sistemas
+    \item[CRUD] Create, Read, Update e Delete
+    \item[DAO] Data Access Object 
+    \item[DBA] DataBase Administrator
+    \item[IDE] Integrated development environment
+    \item[IFPB] Instituto Federal de Educação da Paraíba
+    \item[JEE] Java Enterprise Edition
+    \item[JSF] JavaServer Faces
+    \item[JPQL] Java Persistence Query Language
+    \item[LDAP] Lightweight Directory Access Protocol
     \item[PDS] Plano de Desenvolvimento de Software
     \item[MODUS] Modelo de Desenvolvimento de Software
-    \item[SEDES] Seção de Análise e Desenvolvimento de Sistemas
-    \item[SISBAN]Seção de Implantação de Sistemas e Bancos de Dados
-    \item[TRE-PB] Tribunal Regional Eleitoral da Paraíba
-    \item[IFPB] Instituto Federal de Educação da Paraíba
-    \item[SQL] Structured Query Language
-    \item[DBA] DataBase Administrator
-    \item[JSF] JavaServer Faces
-    \item[SVN] Apache Subversion
     \item[MVC] Model View Control
-    \item[POJO] Plain Old Java Objects
-    \item[IDE] Integrated development environment
-    \item[COSIS] Coordenadoria de Sistemas
-    \item[COSEG] Coordenadoria de Serviços Gerais
-    \item[SETRAN] Seção de Transportes
-    \item[JEE] Java Enterprise Edition
-    \item[LDAP] Lightweight Directory Access Protocol
     \item[PDF] Portable Document Format
-    \item[DAO] Data Access Object 
+    \item[POJO] Plain Old Java Objects
+    \item[SEDES] Seção de Análise e Desenvolvimento de Sistemas
+    \item[SETRAN] Seção de Transportes
+    \item[SISBAN]Seção de Implantação de Sistemas e Bancos de Dados
+    \item[SQL] Structured Query Language
+    \item[SVN] Apache Subversion
+    \item[TRE-PB] Tribunal Regional Eleitoral da Paraíba
 \end{siglas}
 
 % OBSERVAÇÕES-----------------------------------------------------------------------------
