--- a/estrutura/textuais/conclusao.tex
+++ b/estrutura/textuais/conclusao.tex
@@ -3,6 +3,25 @@
 \chapter{Considerações Finais}
 \label{chap:consideracoesFinais}
 
+% ajustar a conclusão, incluir futuras versões, relatar mais claramente sua função e o qual foi a importância para o projeto.
+
+O sistema passou a ser utilizado em sua plenitude a partir de agosto de 2017 e em 2018 terminou o ano sendo o 4º sistema mais usado em todo o TRE com 23.375 transações conforme \autoref{fig:figura-ranking2018}. Já em 2019, até março foram registradas 4.006 transações já sendo o 3º sistema mais utilizado como pode ser visto na \autoref{fig:figura-ranking2019}.
+
+\begin{figure}[!htb]
+    \centering
+    \caption{Veículos - Ranking 2018}
+    \includegraphics[width=0.75\textwidth]{./dados/figuras/ranking2018.png}
+    \fonte{SEDES}
+    \label{fig:figura-ranking2018}
+\end{figure}
+
+\begin{figure}[!htb]
+    \centering
+    \caption{Veículos - Ranking 2019}
+    \includegraphics[width=0.75\textwidth]{./dados/figuras/ranking2019.png}
+    \fonte{SEDES}
+    \label{fig:figura-ranking2019}
+\end{figure}
 
 A experiência de estágio no TRE-PB adicionou propriedade aos conhecimentos adquiridos ao longo da minha jornada como aluno e desenvolvedor de sistemas para internet. 
 Durante os dois anos de estágio fui incluído em uma rotina de trabalho equivalente as teorias e práticas vistas e desenvolvidas em sala de aula. 
