--- a/estrutura/textuais/desenvolvimento/atividades-realizadas.tex
+++ b/estrutura/textuais/desenvolvimento/atividades-realizadas.tex
@@ -85,14 +85,14 @@ desenvolvimento e distribuídas responsabilidades.\cite[p.~2]{Portaria37:2017}
 
 As releases definidas são apresentadas como as versões que serão entregues e são separadas conforme ordem de prioridade das atividades e requisitos como mostra a \autoref{fig:figura-planejamento}.
 
-
-\begin{figure}[!htb]
-    \centering
-    \caption{Planejamento das versões}
-    \includegraphics[width=0.75\textwidth]{dados/figuras/veiculos-planejamento.png}
-    \fonte{SEDES}
-    \label{fig:figura-planejamento}
-\end{figure}
+% Realizar o recorte da imagem de modo que fique menor
+% \begin{figure}[!htb]
+%     \centering
+%     \caption{Planejamento das versões}
+%     \includegraphics[width=0.75\textwidth]{dados/figuras/veiculos-planejamento.png}
+%     \fonte{SEDES}
+%     \label{fig:figura-planejamento}
+% \end{figure}
 
 \section{Desenvolvimento}
 \label{sec:atividadesRealizadasDesenvolvimento}
